fix: modal overflow on smaller screens fixed

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1030,6 +1030,10 @@ body {
   max-height: 100vh;
 }
 
+.max-h-\[80vh\] {
+  max-height: 80vh;
+}
+
 .min-h-0 {
   min-height: 0px;
 }
